fix visual regressions for margin-collapsed h5 and h6

--- a/scss/_base_placeholders.scss
+++ b/scss/_base_placeholders.scss
@@ -221,31 +221,11 @@
   }
 
   %u-no-margin--bottom--h5 {
-    margin-bottom: #{$sp-unit - map-get($nudges, h5-mobile)} !important;
-
-    @media (min-width: $breakpoint-heading-threshold) {
-      margin-bottom: -#{map-get($nudges, h5)} !important;
-    }
-
-    @if ($increase-font-size-on-larger-screens) {
-      @media (min-width: $breakpoint-x-large) {
-        margin-bottom: -#{map-get($nudges, h5-large)} !important;
-      }
-    }
+    margin-bottom: #{$sp-unit - map-get($nudges, h5)} !important;
   }
 
   %u-no-margin--bottom--h6 {
-    margin-bottom: #{$sp-unit - map-get($nudges, h6-mobile)} !important;
-
-    @media (min-width: $breakpoint-heading-threshold) {
-      margin-bottom: -#{map-get($nudges, h6)} !important;
-    }
-
-    @if ($increase-font-size-on-larger-screens) {
-      @media (min-width: $breakpoint-x-large) {
-        margin-bottom: -#{map-get($nudges, h6-large)} !important;
-      }
-    }
+    margin-bottom: #{$sp-unit - map-get($nudges, h6)} !important;
   }
 
   %u-no-margin--bottom--default-text {
